# navigation-plugin-ros

./: README.md
coverage_planner/: CMakeLists.txt  coverage_planner_plugin.xml  package.xml
coverage_planner/include/coverage_planner/: coverage_planner.h
coverage_planner/src/: coverage_planner.cpp
hw4_extra/: polygon_publisher.py
pure_pursuit_local_planner/: CMakeLists.txt  package.xml  pure_pursuit_local_planner_plugin.xml
pure_pursuit_local_planner/include/pure_pursuit_local_planner/: pure_pursuit_local_planner.h
pure_pursuit_local_planner/src/: pure_pursuit_local_planner.cpp
