<?xml version="1.0"?>
<package format="2">
  <name>coverage_planner</name>
  <version>0.1.0</version>
  <description>A global planner for full coverage path planning within a polygon.</description>
  <maintainer email="topaloglutugcan@gmail.com">Tugcan</maintainer>
  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_core</depend>
  <depend>geometry_msgs</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <nav_core plugin="${prefix}/coverage_planner_plugin.xml" />
  </export>
</package>